Support deletion of Indexed DB backing stores in Incognito mode.

In Incognito sessions, Indexed DB backing stores are held in-memory.
They normally last as long as the session, but if explicitly deleted
the backing stores should be freed. This was not happening due to
incorrect early-exits and explicit references.

Bug: 876659
Change-Id: I0f252e6eaab1d6687b5515400ddefd91b18bc94d
Reviewed-on: https://chromium-review.googlesource.com/c/1272123
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598572}
Former-commit-id: bb6fa188ef526f4c90db68a889715cc1624874f4