content/browser/indexed_db/indexed_db_factory.h
@@ -70,7 +70,12 @@ class CONTENT_EXPORT IndexedDBFactory
   virtual OriginDBs GetOpenDatabasesForOrigin(
       const url::Origin& origin) const = 0;
 
-  virtual void ForceClose(const url::Origin& origin) = 0;
+  // Close all connections to all databases within the origin. If
+  // |delete_in_memory_store| is true, references to in-memory databases will be
+  // dropped thereby allowing their deletion (otherwise they are retained for
+  // the lifetime of the factory).
+  virtual void ForceClose(const url::Origin& origin,
+                          bool delete_in_memory_store = false) = 0;
   virtual void ForceSchemaDowngrade(const url::Origin& origin) = 0;
   virtual V2SchemaCorruptionStatus HasV2SchemaCorruption(
       const url::Origin& origin) = 0;
